--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "openai": "^4.28.4"
+    "openai": "^4.28.4",
+    "replicate": "^0.27.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
