--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,10 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -26,7 +28,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
