--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "openai": "^4.28.4",
-    "replicate": "^0.27.1"
+    "replicate": "^0.27.1",
+    "stripe": "^14.19.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
