--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "crisp-sdk-web": "^1.0.22",
     "lucide-react": "^0.344.0",
     "openai": "^4.28.4",
     "react": "^18.2.0",
