added docker and esbuild for build

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,12 +1,12 @@
 {
     "compilerOptions": {
-        "target": "es2016",
-        "module": "commonjs",
+        "target": "es2022",
+        "module": "CommonJS",
         "strict": true,
         "esModuleInterop": true,
         "outDir": "./build",
         "sourceMap": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
     }
 }
