--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "esbuild src/index.ts --bundle --platform=node --outfile=build/index.js",
     "dev": "nodemon --exec ts-node src/index.ts",
+    "start": "npm run build && node build/index.js",
     "postinstall": "prisma generate"
   },
   "keywords": [],
@@ -25,6 +27,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
+    "esbuild": "^0.20.1",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
