--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "esbuild src/index.ts --bundle --platform=node --outfile=build/index.js",
+    "build": "prisma generate && esbuild src/index.ts --bundle --platform=node --outfile=build/index.js",
     "dev": "nodemon --exec ts-node src/index.ts",
-    "start": "npm run build && node build/index.js",
-    "postinstall": "prisma generate"
+    "start": "npm run build && node build/index.js"
   },
   "keywords": [],
   "author": "",
