--- a/client/public/vercel.json
+++ b/client/public/vercel.json
@@ -1,5 +1,1 @@
-{
-    "rewrites": [
-        {"source": "/(.*)", "destination": "/index.html"}
-    ]
-}
+{ "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }] }
